# major-planes-detector

./: CMakeLists.txt  README.md  helper.cpp  helper.h  pcl_detect_planes.cpp  pcl_playback.cpp  test_pcl_detect_planes.cpp
point-cloud-samples/: Building_Columns_Trees_Humans.pcd  Building_Multiple_columns.pcd
